; ModuleID = '/home/carl/AnghaBench/radare2/libr/bin/format/nxo/extr_nxo.c_fileType.c'
source_filename = "/home/carl/AnghaBench/radare2/libr/bin/format/nxo/extr_nxo.c_fileType.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [5 x i8] c"NRO0\00", align 1
@.str.1 = private unnamed_addr constant [5 x i8] c"nro0\00", align 1
@.str.2 = private unnamed_addr constant [5 x i8] c"NRR0\00", align 1
@.str.3 = private unnamed_addr constant [5 x i8] c"nrr0\00", align 1
@.str.4 = private unnamed_addr constant [5 x i8] c"MOD0\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"mod0\00", align 1
@.str.6 = private unnamed_addr constant [5 x i8] c"NSO0\00", align 1
@.str.7 = private unnamed_addr constant [5 x i8] c"nso0\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @fileType(i32* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @memcmp(i32* %4, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0), i32 4)
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %8, label %7

7:                                                ; preds = %1
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0), i8** %2, align 8
  br label %24

8:                                                ; preds = %1
  %9 = load i32*, i32** %3, align 8
  %10 = call i32 @memcmp(i32* %9, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), i32 4)
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %13, label %12

12:                                               ; preds = %8
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.3, i64 0, i64 0), i8** %2, align 8
  br label %24

13:                                               ; preds = %8
  %14 = load i32*, i32** %3, align 8
  %15 = call i32 @memcmp(i32* %14, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.4, i64 0, i64 0), i32 4)
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %18, label %17

17:                                               ; preds = %13
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i8** %2, align 8
  br label %24

18:                                               ; preds = %13
  %19 = load i32*, i32** %3, align 8
  %20 = call i32 @memcmp(i32* %19, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.6, i64 0, i64 0), i32 4)
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %18
  store i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.7, i64 0, i64 0), i8** %2, align 8
  br label %24

23:                                               ; preds = %18
  store i8* null, i8** %2, align 8
  br label %24

24:                                               ; preds = %23, %22, %17, %12, %7
  %25 = load i8*, i8** %2, align 8
  ret i8* %25
}

declare dso_local i32 @memcmp(i32*, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
